--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,7 +15,7 @@ jobs:
 
         steps:
             # Step 1: Check out the code from the repository
-            - name: Checkout code
+            - name: Check out code
               uses: actions/checkout@v2
             
             # Step 2: Set up Python environment
@@ -25,11 +25,11 @@ jobs:
                 python-version: '3.8'
             
             # Step 3: Install dependencies
-            - name: Install Dependencies
+            - name: Install dependencies
               run: |
                 python -m pip install --upgrade pip
                 pip install -r requirements.txt
             
             # Step 4: Run tests
-            - name: Run Tests
+            - name: Run tests
               run: pytest
